# deadman

./: .env.example  .gitignore  AGENTS.md  CODEX_LOG.md  DEVPOST_SUBMISSION.md  README.md  gate_a.txt  pyproject.toml  spec.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/cli/: __init__.py
deadman/: __init__.py  agent.py  attach.py  config.py  incidents.py  paths.py  platforms.py  recovery.py  report.py  run.py  ui.py  watch.py
deadman/adapter/: __init__.py  jsonl.py  session.py  subprocess.py
deadman/detectors/: __init__.py  hung_process.py  progress.py  replay.py
deadman/diagnosis/: __init__.py  fake.py  openai_client.py
deadman/domain/: __init__.py  incident.py  models.py
deadman/executor/: __init__.py  actions.py
deadman/monitor/: __init__.py  descendants.py  process.py  workspace.py
docs/: architecture-decisions.md  codex-event-contract.md
scenarios/: README.md
scripts/: deadman  live-attach-smoke  live-diagnosis-check  live-tui-smoke  setup
tests/: test_adapter_jsonl.py  test_adapter_subprocess.py  test_agent.py  test_attach.py  test_cli.py  test_cli_replay.py  test_cli_run.py  test_cli_watch.py  test_config.py  test_executor_actions.py  test_gate_a_recording.py  test_hung_process_detector.py  test_incident_state.py  test_incidents.py  test_openai_diagnosis_client.py  test_platforms.py  test_policy_diagnosis.py  test_process_monitor.py  test_progress_detectors.py  test_replay_pipeline.py  test_run_pipeline.py  test_session_adapter.py  test_store_sqlite.py  test_ui.py  test_verify_replay.py  test_workspace_fingerprint.py
(+16 files in other folders)
