[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deadman"
version = "0.0.0"
description = "A local recovery harness for Codex sessions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "openai>=2,<3",
  "pydantic>=2.8,<3",
  "psutil>=6,<8",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
  "types-psutil>=7,<8",
]

[project.scripts]
deadman = "apps.cli:main"

[tool.setuptools.packages.find]
include = ["apps*", "deadman*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["apps", "deadman", "tests"]
